--- a/indexes/nsc1028/63.md
+++ b/indexes/nsc1028/63.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [听党史专家司马璐揭秘中共（6）：陈炯明、吴佩孚与中共](../../pages/nsc1028/n13832892.md) 
 #### [观雨堂主：谈样板戏](../../pages/nsc1028/n13832322.md) 
 #### [王友群：整胡风的人后来几乎都挨了整](../../pages/nsc1028/n13831611.md) 
 #### [听党史专家司马璐揭秘中共（5）：一大上的毛泽东](../../pages/nsc1028/n13831107.md) 
@@ -29,7 +30,6 @@
 #### [党史专家司马璐破碎的“延安梦”（3）：“托派”阴影](../../pages/nsc1028/n13806978.md) 
 #### [党史专家司马璐破碎的“延安梦”（2）：毛泽东每天都吃一只鸡](../../pages/nsc1028/n13806517.md) 
 #### [党史专家司马璐破碎的“延安梦”（1）：“像绵羊似的驯服了”](../../pages/nsc1028/n13805795.md) 
-#### [林辉：大饥荒时上书中南海 两位年轻人遭判刑](../../pages/nsc1028/n13803206.md) 
 
 ---
 #### 第 [ [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) ] 页
